Fixed adding book overflow

--- a/style.css
+++ b/style.css
@@ -1,50 +1,52 @@
 /* Page Css */
 html, body {
-    height: 100%;
-    margin: 0;
-  }
+  height: 100%;
+  margin: 0;
+}
 
 .main{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: grid;
+  flex-direction: column;
+  grid-template: 1fr 1fr/ 1fr;
+  height: 100%;
 }
 
 .top-main-div{
-  height: 50%;
-  display: grid;
-  grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+display: grid;
+grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
 }
 
 
 .bottom-main-div{
-  height: 50%;
-  display: flex;
-  justify-content: center;
+display: flex;
+justify-content: center;
+padding-top: 40px;
+
 }
 
 .show-dialog-btn{
-  height: 20%;
-  width: 30%;
+  width: 300px;
+  max-height: 100px;
+
 }
 
 
 /* Book CSS */
 
 .book-div{
-  display: flex;
-  flex-direction: column;
-  border-color: black;
-  border: 2px solid;
+display: flex;
+flex-direction: column;
+border-color: black;
+border: 2px solid;
 
 }
 
 .bookReadCheckboxDiv{
-  display: flex;
-  flex-direction: row;
+display: flex;
+flex-direction: row;
 }
 
 
 .delete-book-button{
-  background-color: lightblue;
+background-color: lightblue;
 }
